map scrollbar fix, card style update

--- a/app/views/components/card/templates/genericPeer/_genericPeer.scss
+++ b/app/views/components/card/templates/genericPeer/_genericPeer.scss
@@ -6,8 +6,9 @@
 
   .rib-image {
     text-align: center;
-    color:#AFAFAF;
+    font-family: 'CiscoSansExtraLight';
       padding-top: 40px;
+      color: #afafaf;
     .rib-section {
       display: table-cell;
       .rib-part {
